syntax = "proto3";

package api.v1;

option go_package = "./v1";

message SuperUserPasswordRequest {}

message SuperUserPasswordResponse {
  bool feature_disabled = 1;
  string super_user_password = 2;
}

service SuperUserPassword {
  rpc FetchSuperUserPassword(SuperUserPasswordRequest) returns (SuperUserPasswordResponse);
}
